[package]
name = "haven"
version = "0.1.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0.27", features = ["derive"] }
tempfile = "3.3.0"
